fixed widget overflow

--- a/client/src/styles/widgets.scss
+++ b/client/src/styles/widgets.scss
@@ -36,6 +36,7 @@ ul.gridster.widget-container {
 			    height: 100%;
 			    min-height: 100%;
 			    z-index: 10;
+			    overflow: hidden !important;
 				}
 				iframe {
 					display: inline;
