--- a/public/css/app-ui.css
+++ b/public/css/app-ui.css
@@ -118,7 +118,8 @@ ul.gridster.widget-container {
       padding: 35px 10px 10px 10px;
       height: 100%;
       min-height: 100%;
-      z-index: 10; }
+      z-index: 10;
+      overflow: hidden !important; }
     ul.gridster.widget-container li.widget .widget-outer .box-body iframe {
       display: inline;
       width: 100%;
